fix: Refactor exception function by an issue with gradle version